// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoButton Button text should display "Info" when shouldInfoDisplay is false 1`] = `
<Fragment>
  <button
    className="button"
    onClick={[Function]}
    type="button"
  >
    Info
  </button>
</Fragment>
`;

exports[`InfoButton Button text should display "Recording Menu" when shouldInfoDisplay is true 1`] = `
<Fragment>
  <button
    className="button"
    onClick={[Function]}
    type="button"
  >
    Recording Menu
  </button>
</Fragment>
`;

exports[`InfoButton Should invoke toggleInfoDisplay when button is clicked 1`] = `
<Fragment>
  <button
    className="button"
    onClick={[Function]}
    type="button"
  >
    Recording Menu
  </button>
</Fragment>
`;
